fix: add visible focus

--- a/src/components/lyne-text-input/styles/lyne-text-input.component.scss
+++ b/src/components/lyne-text-input/styles/lyne-text-input.component.scss
@@ -65,6 +65,8 @@
   border: pxToRem(1) solid var(--border-color-default);
   border-radius: pxToRem(var(--border-radius-4x));
 
+  @include visibleFocus();
+
 }
 
 // Input Variant
